Fixed Mentions Spacing

--- a/discorddark.css
+++ b/discorddark.css
@@ -264,6 +264,9 @@ h2.name-3l27Hl, h2.membersGroup-v9BXpm, .name-3l27Hl .overflow-WK9Ogt {
 	margin-top: .75rem!important;
 	margin-bottom: 1.75rem!important;
 }
+.mentioned-xhSam7 {
+	margin-bottom: 0.75rem!important;
+}
 
 /* Buttons */
 /* Hover Color Change: -23, -50, -31 */
